# gp2pl

./: .env.example  .gitignore  README.md  REPRODUCING.md  pyproject.toml
paper_artifacts/gp2pl_evaluation/v1/: README.md  benchmark_compatibility.json  certificate_challenge_summary.json  external_reference_results.json  five_seed_full_compiler_summary.json  manifest.json  raw_moose_extension_five_seed_summary.json
paper_artifacts/temporal_goal_benchmark/v1/: README.md  benchmark.json  manifest.json  release_validation.json
paper_artifacts/temporal_goal_benchmark/v1/model_run/: DELIVERY.md
paper_artifacts/temporal_goal_benchmark/v1/source/: SHA256SUMS
scripts/: audit_public_repository.py  build_reproducibility_release.py  generate_evaluation_tables.py  gp_backend_audit.py  public_result_schema.py  run_achievement_benchmark_batch.sh  run_full_test_jason_validation.py  run_paired_compiler_experiments.py  run_temporal_translation_calls.py  run_timestamped_moose_asl_batch.py  setup_mona.sh  verify_public_result_release.py
src/: main.py
src/domain_level_planning/: atomic_module_synthesis.py  gp_backends.py  temporal_goal_appender.py
src/evaluation/: external_reference_planners.py  public_temporal_dataset.py  temporal_benchmark_release.py
src/evaluation/temporal_compilation/: ltlf_to_dfa.py
src/execution_logging/: execution_logger.py
src/utils/: config.py  symbol_normalizer.py
